[package]
edition = "2021"
name = "creatorsforacause"
publish = false
version = "0.0.0"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
aliri_braid = "0.3.1"
axum = "0.6.0-rc.4"
base64 = "0.13.1"
color-eyre = "0.6.2"
dotenv = "0.15.0"
envy = "0.4.2"
google-youtube3 = "4.0.1"
hyper = "0.14.23"
once_cell = "1.16.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.11.0", features = ["tls", "tls-roots"] }
opentelemetry-semantic-conventions = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.13.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
time = { version = "0.3.17", features = ["serde", "serde-well-known"] }
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
tonic = "0.8.2"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-honeycomb = "0.4.3"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
twitch_api = { version = "0.7.0-rc.2", features = ["client", "eventsub", "helix", "hmac", "reqwest"] }
url = { version = "2.3.1", features = ["serde"] }

[patch.crates-io]
# Cant use git cause weird dependency resolution
twitch_api = { path = "../twitch_api" }
twitch_types = { path = "../twitch_api/twitch_types" }
