[package]
edition = "2021"
name = "creatorsforacause"
publish = false
version = "0.0.0"

[profile.release]
codegen-units = 1
debug = 1
lto = true

[dependencies]
aliri_braid = "^0.3"
axum = { version = "^0.6", features = ["macros", "headers"] }
color-eyre = "^0.6"
dioxus = { version = "^0.3", git = "https://github.com/dioxuslabs/dioxus"}
dioxus-liveview = { version = "^0.3", features = ["axum"], git = "https://github.com/dioxuslabs/dioxus" }
dotenv = "^0.15"
envy = "^0.4"
futures = "^0.3"
git-version = "0.3.5"
google-youtube3 = "^4.0"
humansize = { version = "^2.1", features = ["no_alloc"] }
hyper = "^0.14"
once_cell = "^1.16"
opentelemetry = { version = "^0.18", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "^0.11", features = ["tls", "tls-roots"] }
opentelemetry-semantic-conventions = "^0.10"
prometheus-client = "^0.19"
reqwest = { version = "^0.11", features = ["rustls-tls"], default-features = false }
rust-embed-for-web = "11.1.0"
scraper = "^0.14"
sentry = { version = "^0.29", features = ["backtrace", "contexts", "panic", "tower", "tracing"] }
sentry-tower = { version = "^0.29", features = ["http"] }
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_json = "^1.0"
thiserror = "1.0.38"
time = { version = "^0.3", features = ["parsing", "serde", "serde-well-known"] }
tokio = { version = "^1.21", features = ["full"] }
toml = "^0.5"
tonic = "^0.8"
tower = "^0.4"
tower-http = { version = "^0.3", features = ["catch-panic", "cors", "set-header", "timeout", "trace"] }
tracing = "^0.1"
tracing-error = "^0.2"
tracing-opentelemetry = "^0.18"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
twitch_api = { version = "^0.7.0-rc.3", features = ["client", "helix", "reqwest"] }
